# devpulse-ai

./: .env.example  .gitignore  Dockerfile  README.md  a.py  activate_workflow.py  analyze_supabase_csvs.py  docker-compose.yml  find_workflow.py  item_enriched_rows.csv  items_rows.csv  list_tables.py  pyproject.toml  requirements.txt  sources_rows.csv  suspected_mocks.csv  v_digest_rows.csv
app/: config.py  crypto.py  github_feed.py  github_items.py  main.py  renderer.py  settings.py  store.py
backend/: db.py  db_rest.py  store.py  store_factory.py  store_rest.py
backend/enrich/: eval_metrics.py  pipeline.py  train_scoring_model.py  worker.py
backend/ingest/: __init__.py  core.py  github.py  hf.py  ingest_adapter.py  medium.py  runner.py  tagger.py
backend/integrations/: n8n_client.py
backend/models/: scorer_lr.joblib
backend/tests/data/: enrichment_gold.jsonl
core/agents/policy/: config.yaml  trainer.py
core/agents/prompts/: digest_prompt.txt  (+1 more)
core/bridge_api/: gemini_client.py  lightning_client.py  main.py  mcp_client.py
core/storage/: db.py  schema.sql
migrations/: 0001_init.sql  0002_tables.sql  0003_indexes_digest.sql  0004_refresh_fn.sql  0005_rls.sql
n8n/: config
n8n/workflows/: DevPulse - Daily Digest.json  daily_digest.json  devpulse_daily_digest.json  devpulse_realtime_email.json
scripts/: sync_n8n_workflow.py
tests/: test_endpoints.py
utils/: seed_supabase.py  test_supabase_jwt.py
utils/html_templates/: email.html
utils/scripts/: ingest_and_alert.ps1  manual_run.py  notify_latest_to_n8n.py  ping_n8n.py  preview_digest.py
(+3 files in other folders)
